GNOME Bugzilla – Bug 684023
Find bar seemingly does bogus search if 'case sensitive' option is pressed
Last modified: 2012-12-09 15:49:35 UTC
To reproduce: - Ctrl+F - Do not type anything in the entry box - Press the 'case sensitive' option - The status message in the bar will change to "Not found", but there's nothing to be searched Looks like a bug to me.
Created attachment 231068 [details] [review] Don't initiate a search if there is no search string
Created attachment 231069 [details] [review] Fix empty search handling
Created attachment 231082 [details] [review] Don't perform empty searches when toggling case matches