Don't perform empty searches when toggling case matches

https://bugzilla.gnome.org/show_bug.cgi?id=684023